--- a/3.HTML区块.html
+++ b/3.HTML区块.html
@@ -6,7 +6,27 @@
     <title>HTML区块</title>
 </head>
 <body>
-    
+    <div class="nav"><!-- navigation 导航 -->
+        <a href="https://ys.mihoyo.com">链接1</a>
+        <a href="https://ys.mihoyo.com" >链接2</a>
+        <a href="https://ys.mihoyo.com" >链接3</a>
+        <a href="https://ys.mihoyo.com" >链接4</a>
+    </div>
+    <div class="content">
+        <h1>文章标题</h1>
+        <p>文章内容</p>
+        <p>文章内容</p>
+        <p>文章内容</p>
+        <p>文章内容</p>
+        <p>文章内容</p>
+    </div>
+    <span>这是第1个span标签</span>
+    <span>这是第2个span标签</span>
+    <span>这是第3个span标签</span>
+    <span>这是第4个span标签</span>
+    <hr>
+    <span>链接点击这里<a href="https://ys.mihoyo.com" >这被子有的</a></span>
+
     
 </body>
 </html>
