--- a/2.HTML属性.html
+++ b/2.HTML属性.html
@@ -20,6 +20,7 @@
     <a href="https://ys.mihoyo.com" target="_top">顶级窗口</a>
     <br>
     <a href="https://ys.mihoyo.com" target="_framename">框架窗口</a>
+                               <!-- target 目标-->
 <!--    
                                             _self        当前窗口
                                             _blank       新窗口
