--- a/2.HTML属性.html
+++ b/2.HTML属性.html
@@ -9,10 +9,13 @@
              <!-- URL             自定义名称       -->
     <a href="https://ys.mihoyo.com">百度</a>
     <!-- anchor 锚点  hypertext reference 超文本引用-->
-    <hr>
+
+    <hr><!--Horizontal Rul 水平分隔线-->
 
     <a href="https://ys.mihoyo.com" target="_self">当前窗口</a>
-    <br>
+    
+    <br><!--break 换行-->
+
     <a href="https://ys.mihoyo.com" target="_blank">新窗口</a>
     <br>
     <a href="https://ys.mihoyo.com" target="_parent">父窗口</a>
