--- a/16.JS DOM节点操作.html
+++ b/16.JS DOM节点操作.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+                                <!--宽度为设备宽度      初始缩放大小  -->
     <title>JS DOM节点操作</title>
     <style>
         table{
